
AC_PREREQ([2.68])
AC_INIT([WM], [0.0], [hendrik@consetetur.de])
AM_INIT_AUTOMAKE([-Wall foreign])
AC_CONFIG_HEADERS([config.h])

AC_LANG([C++])

# Checks for programs.
AC_PROG_CXX

# Checks for header files.

# Checks for library functions.

# Checks for Libraries
PKG_CHECK_MODULES([XCB], [xcb])
PKG_CHECK_MODULES([XCB_AUX], [xcb-aux])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
